--- a/table.html
+++ b/table.html
@@ -12,9 +12,9 @@
     <table>
         <tr>
             <td>
-                <form onsubmit="event.preventDefault();onFormSubmit();" autocomplete="off">
+                <form onsubmit="event.preventDefault();onFormSubmit();" border="1" autocomplete="off">
                     <div>
-                        <label>User Id*</label><label class="validation-error hide" id="fullNameValidationError">This field is required.</label>
+                        <label>User Id*</label>
                         <input type="text" name="userid" id="userid">
                     </div>
                     <div>
