--- a/table.html
+++ b/table.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>
-        Html CRUD with JavaScript
-    </title>
-    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <table>
         <tr>
@@ -15,7 +9,7 @@
                 <form onsubmit="event.preventDefault();onFormSubmit();" border="1" autocomplete="off">
                     <div>
                         <label>User Id*</label>
-                        <input type="text" name="userid" id="userid">
+                        <input type="text" name="id" id="id">
                     </div>
                     <div>
                         <label>Username</label>
