--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
     <table>
         <tr>
             <td>
-                <form onsubmit="event.preventDefault();onFormSubmit();" border="1" autocomplete="off">
+                <form onsubmit="event.preventDefault();onUserSubmit();" border="1" autocomplete="off">
                     <div>
                         <label>User Id*</label>
                         <input type="text" name="id" id="id">
